[gd_scene load_steps=2 format=3 uid="uid://b8q6y3x2l5k4j"]

[ext_resource type="Script" path="res://Scripts/UI/Mario35WidescreenHUD.gd" id="1_script"]

[node name="Mario35WidescreenHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="LeftPanel" type="ColorRect" parent="."]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 110.0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBox" type="VBoxContainer" parent="LeftPanel"]
layout_mode = 1
offset_right = 110.0
offset_bottom = 240.0
theme_override_constants/separation = 0

[node name="LeftGrid" type="GridContainer" parent="LeftPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 3

[node name="RightPanel" type="ColorRect" parent="."]
unique_name_in_owner = true
clip_contents = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -110.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBox" type="VBoxContainer" parent="RightPanel"]
layout_mode = 1
offset_right = 110.0
offset_bottom = 240.0
theme_override_constants/separation = 0

[node name="RightGrid" type="GridContainer" parent="RightPanel/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 2
theme_override_constants/v_separation = 2
columns = 3



[node name="Content" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
